--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ dist/
 web-build/
 expo-env.d.ts
 
+# EAS
+.eas/
+
 # Native
 .kotlin/
 *.orig.*
@@ -32,6 +35,10 @@ yarn-error.*
 
 # local env files
 .env*.local
+
+# secrets
+google-services.json
+GoogleService-Info.plist
 
 # typescript
 *.tsbuildinfo
