--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manhunt",
+  "name": "geotag",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -15,15 +15,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-firebase/app": "^22.2.0",
+    "@react-native-firebase/auth": "^22.2.0",
+    "@react-native-firebase/firestore": "^22.2.0",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.9",
+    "expo-build-properties": "~0.14.6",
+    "expo-dev-client": "~5.1.8",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
+    "expo-updates": "~0.28.13",
     "expo-web-browser": "~14.1.6",
+    "firebase": "^11.7.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
