implement mobile google signin

--- a/app.json
+++ b/app.json
@@ -45,7 +45,8 @@
             "useFrameworks": "static"
           }
         }
-      ]
+      ],
+      "@react-native-google-signin/google-signin"
     ],
     "experiments": {
       "typedRoutes": true
