--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
+    "postinstall": "patch-package",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -18,6 +19,7 @@
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/auth": "^22.2.0",
     "@react-native-firebase/firestore": "^22.2.0",
+    "@react-native-google-signin/google-signin": "^13.3.1",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.9",
     "expo-build-properties": "~0.14.6",
@@ -48,9 +50,17 @@
     "eslint-plugin-prettier": "~5.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
+    "patch-package": "^8.0.0",
     "prettier": "^3.5.3",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
