--- a/app.json
+++ b/app.json
@@ -15,10 +15,11 @@
     "ios": {
       "bundleIdentifier": "com.playgeotag.app",
       "googleServicesFile": "./GoogleService-Info.plist",
-      "supportsTablet": true,
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
-      }
+      },
+      "supportsTablet": true,
+      "usesAppleSignIn": true
     },
     "android": {
       "adaptiveIcon": {
@@ -35,9 +36,10 @@
       "favicon": "./src/assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
       "@react-native-firebase/app",
       "@react-native-firebase/auth",
+      "@react-native-google-signin/google-signin",
+      "expo-apple-authentication",
       [
         "expo-build-properties",
         {
@@ -46,7 +48,7 @@
           }
         }
       ],
-      "@react-native-google-signin/google-signin"
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
