--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@react-native-google-signin/google-signin": "^13.3.1",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.9",
+    "expo-apple-authentication": "~7.2.4",
     "expo-build-properties": "~0.14.6",
+    "expo-crypto": "~14.1.4",
     "expo-dev-client": "~5.1.8",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
@@ -40,7 +42,9 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
-    "setimmediate": "^1.0.5"
+    "setimmediate": "^1.0.5",
+    "expo-apple-authentication": "~7.2.4",
+    "expo-crypto": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
