--- a/package.json
+++ b/package.json
@@ -20,30 +20,28 @@
     "@react-native-firebase/firestore": "^22.2.0",
     "@react-native-google-signin/google-signin": "^13.3.1",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.9",
+    "expo": "53.0.11",
     "expo-apple-authentication": "~7.2.4",
     "expo-build-properties": "~0.14.6",
-    "expo-crypto": "~14.1.4",
-    "expo-dev-client": "~5.1.8",
+    "expo-crypto": "~14.1.5",
+    "expo-dev-client": "~5.2.0",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.6",
-    "expo-splash-screen": "~0.30.8",
+    "expo-router": "~5.1.0",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.7",
-    "expo-updates": "~0.28.13",
+    "expo-system-ui": "~5.0.8",
+    "expo-updates": "~0.28.14",
     "expo-web-browser": "~14.1.6",
     "firebase": "~11.3.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-web": "~0.20.0",
-    "setimmediate": "^1.0.5",
-    "expo-apple-authentication": "~7.2.4",
-    "expo-crypto": "~14.1.4"
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "~0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -52,7 +50,7 @@
     "eslint-config-expo": "~9.2.0",
     "eslint-plugin-prettier": "~5.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.5",
+    "jest-expo": "~53.0.7",
     "prettier": "^3.5.3",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
