--- a/app.json
+++ b/app.json
@@ -38,6 +38,7 @@
     "plugins": [
       "@react-native-firebase/app",
       "@react-native-firebase/auth",
+      "@react-native-firebase/crashlytics",
       "@react-native-google-signin/google-signin",
       "expo-apple-authentication",
       [
