--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/auth": "^22.2.0",
+    "@react-native-firebase/crashlytics": "22.2.0",
     "@react-native-firebase/firestore": "^22.2.0",
     "@react-native-google-signin/google-signin": "^13.3.1",
     "@react-navigation/native": "^7.1.6",
